Fix chat on mobile

--- a/src/Services/AstormClient/src/app/core/menu-card-presenter/menu-card-presenter.component.scss
+++ b/src/Services/AstormClient/src/app/core/menu-card-presenter/menu-card-presenter.component.scss
@@ -36,6 +36,10 @@
 }
 
 @media (max-width: 650px) {
+  #chat-icon {
+    display: none;
+  }
+
   .sidenav {
     width: 15%;
 
