--- a/src/Services/AstormClient/src/app/modules/chat/presenter/chat-card-presenter/chat-card-presenter.component.scss
+++ b/src/Services/AstormClient/src/app/modules/chat/presenter/chat-card-presenter/chat-card-presenter.component.scss
@@ -93,3 +93,9 @@
     right: 450px;
   }
 }
+
+@media (max-width: 650px) {
+  .container {
+    width: 90%;
+  }
+}
