--- a/src/Services/AstormClient/src/app/modules/chat/presenter/friends-card-presenter/friends-card-presenter.component.scss
+++ b/src/Services/AstormClient/src/app/modules/chat/presenter/friends-card-presenter/friends-card-presenter.component.scss
@@ -81,6 +81,8 @@
 
 @media(max-width: 650px) {
     .container {
+        display: none;
+        
         .friends {
             .friend {
                 &__image {
